# rag-doc-search

./: README.md  pyproject.toml
examples/: qna_api_example.py  qna_stream_websocket_example.py
rag_doc_search/src/bot_models/: azure_chatbot_model.py
rag_doc_search/utils/: config.py
rag_doc_search_template/: __init__.py
rag_doc_search_template/src/bot_models/: bedrock_chatbot_model.py  chatbot_model.py  openai_chatbot_model.py
rag_doc_search_template/utils/: callback.py  config.py
