[tool.poetry]
name = "rag-doc-search-template"
version = "0.1.0"
description = "This package offers a lightweight and straightforward solution for implementing Retrieval-augmented generation (RAG) functionality with large language models (LLMs). RAG enhances prediction quality by incorporating external data storage during inference, enabling the construction of more contextually rich prompts. Leveraging combinations of context, history, and up-to-date knowledge, RAG LLMs empower users to generate more accurate and relevant responses. This package streamlines the integration of RAG capabilities into applications, facilitating the creation of more intelligent and context-aware conversational agents, search engines, and text generation systems."
authors = ["Harshad Kadam <harshad.kadam@sourcefuse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "^1.34.55"
botocore = "^1.34.55"
langchain = "0.1.1"
opensearch-py = "^2.4.2"
faiss-cpu = "^1.8.0"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
websockets = "^12.0"
jinja2 = "^3.1.3"
openai = "0.28.0"
tiktoken = "^0.6.0"
pgvector = "^0.2.5"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"